added css and logic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/reset.css">
@@ -12,13 +12,29 @@
 </head>
 <body>
 
+  <!-- Splash page -->
+  <div class="splash">
+    <img src="assets/images/mortalkombat.png" alt="Mortal Kombat" class="animated fadeIn splash-img">
+    <button class="btn btn-outline-secondary animated fadeInUp splash-btn" type="button">Play</button>
+  </div>
 
-<div class="splash">
-  <img src="assets/images/mortalkombat.png" alt="Mortal Kombat" class="animated fadeIn" id="splash-img">
-  <button class="btn btn-outline-secondary animated fadeInUp splash-btn" type="button">Play</button>
-</div>
-
-
+  
+  <div class="game-page">
+    <div class="playerMenu">
+      <div class="c1 playerChar">
+        <img src="assets/images/raidenProf.png" alt="Raiden">
+      </div>
+      <div class="c2 playerChar">
+        <img src="assets/images/johnnycageProf.png" alt="Johhny Cage">
+      </div>
+      <div class="c3 playerChar">
+        <img src="assets/images/subzeroProf.png" alt="Sub-Zero">
+      </div>
+      <div class="c4 playerChar">
+        <img src="assets/images/scorpionProf.png" alt="Scorpion">
+      </div>
+    </div>
+  </div>
 
 
 
