edited css and added logic

--- a/index.html
+++ b/index.html
@@ -18,24 +18,47 @@
     <button class="btn btn-outline-secondary animated fadeInUp splash-btn" type="button">Play</button>
   </div>
 
-  
+  <!-- Game Page -->
   <div class="game-page">
     <div class="playerMenu">
+
+      <div class="directions">
+        Select your Fighter
+      </div>
+
       <div class="c1 playerChar">
+        <div class="characterName">Raiden</div>
         <img src="assets/images/raidenProf.png" alt="Raiden">
+        <div class="health">HP: 180</div>
       </div>
+
       <div class="c2 playerChar">
-        <img src="assets/images/johnnycageProf.png" alt="Johhny Cage">
+        <div class="characterName">Johnny Cage</div>
+        <img src="assets/images/johnnycageProf.png" alt="JohhnyCage">
+        <div class="health">HP: 100</div>
       </div>
+
       <div class="c3 playerChar">
+        <div class="characterName">Sub-Zero</div>
         <img src="assets/images/subzeroProf.png" alt="Sub-Zero">
+        <div class="health">HP: 150</div>
       </div>
+
       <div class="c4 playerChar">
-        <img src="assets/images/scorpionProf.png" alt="Scorpion">
+        <div class="characterName">Scorpion</div>
+        <img src="assets/images/scorpionProf.png"alt="Scorpion">
+        <div class="health">HP: 120</div>
       </div>
+
+    <div class="userArea">
+        <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1" alt=""></div> -->
     </div>
+    </div>
+
   </div>
 
+  <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1" alt=""></div> -->
+    <!-- <div class="p2"><img src="assets/images/raiden.gif" id="p2" alt=""></div> -->
 
 
   <!-- <img src="assets/images/finishhim.gif" alt=""> -->
