edited logic and animations for player selection

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Select your Fighter
       </div>
 
-      <div class="c1 playerChar">
+      <!-- <div class="c1 playerChar">
         <div class="characterName">Raiden</div>
         <img src="assets/images/raidenProf.png" alt="Raiden">
         <div class="health">HP: 180</div>
@@ -48,11 +48,32 @@
         <div class="characterName">Scorpion</div>
         <img src="assets/images/scorpionProf.png"alt="Scorpion">
         <div class="health">HP: 120</div>
+      </div> -->
+
+    </div>
+
+
+
+    <!-- <div class="playerStats">
+      <div class="p1Stats">
+      </div>
+    </div> -->
+
+    <div class="versusScreen">
+
+    </div>
+
+
+    <!-- Fight area for selected characters -->
+    <div class="fightArea">
+      <div class="userArea">
+          <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1"alt=""></div> -->
       </div>
 
-    <div class="userArea">
-        <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1" alt=""></div> -->
-    </div>
+      <div class="computerArea">
+
+      </div>
+
     </div>
 
   </div>
