edited logic for displaying versus screen

--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
     </div> -->
 
     <div class="versusScreen">
-
+      <div class="fight">
+        
+      </div>
+      <div class="vsP1 animated slideInLeft">
+        <!-- <img src="assets/images/raidenProf.png" alt=""> -->
+      </div>
+      <div class="vs fadeIn">
+        <!-- <img src="assets/images/vs.png" alt=""> -->
+      </div>
+      <div class="vsP2 animated slideInRight">
+        <!-- <img src="assets/images/johnnycageProf.png" alt=""> -->
+      </div>
     </div>
 
 
