--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="versusScreen">
       <div class="fight">
-        
+
       </div>
       <div class="vsP1 animated slideInLeft">
         <!-- <img src="assets/images/raidenProf.png" alt=""> -->
@@ -77,11 +77,25 @@
 
     <!-- Fight area for selected characters -->
     <div class="fightArea">
-      <div class="userArea">
-          <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1"alt=""></div> -->
+
+      <div id="logo">
+        <img src="assets/images/mortalkombatLogo.png" alt="Mortal Kombat Logo">
       </div>
 
-      <div class="computerArea">
+      <div class="userStats">
+        <div id="userCharName">Scorpion</div>
+        <div id="userName">You</div>
+        <div class="healthBar userHealthBar">
+            <div id="userHealth">HP: 150</div>
+          </div>
+      </div>
+
+      <div class="userArea">
+          <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1"alt=""></div> -->
+          
+      </div>
+
+      <div class="opponentArea">
 
       </div>
 
