--- a/index.html
+++ b/index.html
@@ -79,16 +79,27 @@
     <div class="fightArea">
 
       <div id="logo">
-        <img src="assets/images/mortalkombatLogo.png" alt="Mortal Kombat Logo">
+        <!-- <img src="assets/images/mortalkombatLogo.png" alt="Mortal Kombat Logo"> -->
       </div>
 
       <div class="userStats">
-        <div id="userCharName">Scorpion</div>
+        <!-- <div id="userCharName">Scorpion</div>
         <div id="userName">You</div>
         <div class="healthBar userHealthBar">
             <div id="userHealth">HP: 150</div>
-          </div>
+          </div> -->
       </div>
+
+      <div class="opponentStats">
+          <!-- <div id="opponentCharName">Sub-Zero</div>
+          <div id="opponentName">Opponent</div>
+          <div class="healthBar opponentHealthBar">
+              <div id="opponentHealth">HP: 150</div>
+            </div> -->
+        </div>
+
+
+      
 
       <div class="userArea">
           <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1"alt=""></div> -->
