--- a/index.html
+++ b/index.html
@@ -27,30 +27,6 @@
         Select your Fighter
       </div>
 
-      <!-- <div class="c1 playerChar">
-        <div class="characterName">Raiden</div>
-        <img src="assets/images/raidenProf.png" alt="Raiden">
-        <div class="health">HP: 180</div>
-      </div>
-
-      <div class="c2 playerChar">
-        <div class="characterName">Johnny Cage</div>
-        <img src="assets/images/johnnycageProf.png" alt="JohhnyCage">
-        <div class="health">HP: 100</div>
-      </div>
-
-      <div class="c3 playerChar">
-        <div class="characterName">Sub-Zero</div>
-        <img src="assets/images/subzeroProf.png" alt="Sub-Zero">
-        <div class="health">HP: 150</div>
-      </div>
-
-      <div class="c4 playerChar">
-        <div class="characterName">Scorpion</div>
-        <img src="assets/images/scorpionProf.png"alt="Scorpion">
-        <div class="health">HP: 120</div>
-      </div> -->
-
     </div>
 
 
@@ -65,19 +41,23 @@
 
       </div>
       <div class="vsP1 animated slideInLeft">
-        <!-- <img src="assets/images/raidenProf.png" alt=""> -->
+
       </div>
       <div class="vs fadeIn">
-        <!-- <img src="assets/images/vs.png" alt=""> -->
+
       </div>
       <div class="vsP2 animated slideInRight">
-        <!-- <img src="assets/images/johnnycageProf.png" alt=""> -->
+
       </div>
     </div>
 
 
     <!-- Fight area for selected characters -->
     <div class="fightArea">
+
+      <div class="finish-him">
+        <!-- <img src="assets/images/finishhim.gif" alt=""> -->
+      </div>
 
       <div id="logo">
       </div>
@@ -86,14 +66,12 @@
       </div>
 
       <div class="opponentStats">
-        </div>
+      </div>
 
 
       
 
       <div class="userArea">
-          <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1"alt=""></div> -->
-          
       </div>
 
       <div class="opponentArea">
@@ -103,9 +81,6 @@
     </div>
 
   </div>
-
-  <!-- <div class="p1"><img src="assets/images/subzero.gif" id="p1" alt=""></div> -->
-    <!-- <div class="p2"><img src="assets/images/raiden.gif" id="p2" alt=""></div> -->
 
 
   <script
