added logic to game

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
       
 
       <div class="userArea">
+          <!-- <div class="damage" id="damage-p1"><span>-8</span> HP</div> -->
       </div>
 
       <div class="opponentArea">
-
+        <!-- <div class="damage" id="damage-p2"><span>-15</span> HP</div> -->
       </div>
 
     </div>
