--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="icon" href="assets/images/mortalkombatLogo.png" />
-  <!--
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/reset.css" />
@@ -29,12 +26,8 @@
     <div class="playerMenu">
     </div>
 
-    <!--
-        <div class="playerStats">
-          <div class="p1Stats">
-          </div>
-        </div>
-      -->
+    <div class="music-directions"></div>
+
 
     <div class="versusScreen">
       <div class="fight"></div>
@@ -46,7 +39,6 @@
     <!-- Fight area for selected characters -->
     <div class="fightArea">
       <div class="finish-him">
-        <!-- <img src="assets/images/finishhim.gif" alt=""> -->
       </div>
 
       <div id="logo"></div>
@@ -56,20 +48,20 @@
       <div class="opponentStats"></div>
 
       <div class="roundEnd">
-        <!-- <img id="fatality" src="assets/images/fatality.png" alt="Fatality"> -->
-        <!-- <div id="winner"><span id="winningChar">Johnny Cage</span><p>Wins</p></div> -->
       </div>
 
       <div class="userArea">
-        <!-- <div class="damage" id="damage-p1"><span>-8</span> HP</div> -->
       </div>
 
       <div class="opponentArea">
-        <!-- <div class="damage" id="damage-p2"><span>-15</span> HP</div> -->
       </div>
 
-      <!-- <div id="winner"><span>Johnny Cage</span> Wins</div> -->
     </div>
+
+    <!-- Game Over -->
+    <div class="game-over">
+    </div>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
